--- a/quickshell/translations/poexports/it.json
+++ b/quickshell/translations/poexports/it.json
@@ -113,8 +113,14 @@
   "Add a VPN in NetworkManager": {
     "Add a VPN in NetworkManager": "Aggiungi una VPN in NetworkManager"
   },
+  "Add a border around the dock": {
+    "Add a border around the dock": ""
+  },
   "Adjust the number of columns in grid view mode.": {
     "Adjust the number of columns in grid view mode.": "Regola il numero di colonne nella modalità di visualizzazione a griglia."
+  },
+  "Afternoon": {
+    "Afternoon": ""
   },
   "All": {
     "All": "Tutto"
@@ -692,6 +698,9 @@
   "DWL service not available": {
     "DWL service not available": "Servizio DWL non disponibile"
   },
+  "Daily Forecast": {
+    "Daily Forecast": ""
+  },
   "Daily at:": {
     "Daily at:": "Giornalmente alle:"
   },
@@ -721,6 +730,15 @@
   },
   "Date Format": {
     "Date Format": "Formato Data"
+  },
+  "Dawn (Astronomical Twilight)": {
+    "Dawn (Astronomical Twilight)": ""
+  },
+  "Dawn (Civil Twilight)": {
+    "Dawn (Civil Twilight)": ""
+  },
+  "Dawn (Nautical Twilight)": {
+    "Dawn (Nautical Twilight)": ""
   },
   "Day Temperature": {
     "Day Temperature": "Temperatura Giorno"
@@ -869,6 +887,15 @@
   "Duration": {
     "Duration": "Durata"
   },
+  "Dusk (Astronomical Twilight)": {
+    "Dusk (Astronomical Twilight)": ""
+  },
+  "Dusk (Civil Twighlight)": {
+    "Dusk (Civil Twighlight)": ""
+  },
+  "Dusk (Nautical Twilight)": {
+    "Dusk (Nautical Twilight)": ""
+  },
   "Dynamic Theming": {
     "Dynamic Theming": "Tema dinamico"
   },
@@ -889,6 +916,9 @@
   },
   "Enable GPU Temperature": {
     "Enable GPU Temperature": "Abilita Temperatura GPU"
+  },
+  "Enable Overview Overlay": {
+    "Enable Overview Overlay": ""
   },
   "Enable System Sounds": {
     "Enable System Sounds": "Abilita Suoni Sistema"
@@ -1115,6 +1145,9 @@
   "Force terminal applications to always use dark color schemes": {
     "Force terminal applications to always use dark color schemes": "Forza applicazioni da terminale ad usare schemi di colori scuri"
   },
+  "Forecast Not Available": {
+    "Forecast Not Available": ""
+  },
   "Forget": {
     "Forget": ""
   },
@@ -1156,6 +1189,9 @@
   },
   "Github:": {
     "Github:": "Github:"
+  },
+  "Golden Hour": {
+    "Golden Hour": ""
   },
   "Good": {
     "Good": "Buona"
@@ -1228,6 +1264,9 @@
   },
   "Hour": {
     "Hour": "Ore"
+  },
+  "Hourly Forecast": {
+    "Hourly Forecast": ""
   },
   "How often to change wallpaper": {
     "How often to change wallpaper": "Quanto spesso cambiare lo sfondo"
@@ -1550,6 +1589,9 @@
   "Monospace Font": {
     "Monospace Font": "Font Monospace"
   },
+  "Morning": {
+    "Morning": ""
+  },
   "Mount": {
     "Mount": "Monta"
   },
@@ -1603,6 +1645,9 @@
   },
   "New York, NY": {
     "New York, NY": "New York, NY"
+  },
+  "Night": {
+    "Night": ""
   },
   "Night Mode": {
     "Night Mode": "Modalità Notte"
@@ -1750,6 +1795,9 @@
   },
   "Open search bar to find text": {
     "Open search bar to find text": "Apri barra di ricerca per cercare testo"
+  },
+  "Open with...": {
+    "Open with...": ""
   },
   "Optional description": {
     "Optional description": ""
@@ -1910,6 +1958,9 @@
   "Power Profile OSD": {
     "Power Profile OSD": "OSD Profilo Alimentazione"
   },
+  "Precipitation Chance": {
+    "Precipitation Chance": ""
+  },
   "Preference": {
     "Preference": ""
   },
@@ -2008,6 +2059,9 @@
   },
   "Refresh": {
     "Refresh": "Aggiorna"
+  },
+  "Refresh Weather": {
+    "Refresh Weather": ""
   },
   "Reject Jobs": {
     "Reject Jobs": ""
@@ -2111,6 +2165,9 @@
   "Screen sharing": {
     "Screen sharing": "Condivisione schermo"
   },
+  "Scroll song title": {
+    "Scroll song title": ""
+  },
   "Scrolling": {
     "Scrolling": "Scorrimento"
   },
@@ -2140,6 +2197,9 @@
   },
   "Security": {
     "Security": ""
+  },
+  "Select Application": {
+    "Select Application": ""
   },
   "Select Launcher Logo": {
     "Select Launcher Logo": "Seleziona Logo Launcher"
@@ -2380,6 +2440,12 @@
   },
   "Storage & Disks": {
     "Storage & Disks": "Archiviazione & Dischi"
+  },
+  "Sunrise": {
+    "Sunrise": ""
+  },
+  "Sunset": {
+    "Sunset": ""
   },
   "Support Development": {
     "Support Development": "Supporta Sviluppo"
@@ -2732,6 +2798,9 @@
   "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": {
     "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": "Quando abilitato, le applicazioni sono ordinate alfabeticamente. Quando disabilitato, le applicazioni sono ordinate per frequenza d'uso"
   },
+  "When enabled, shows the launcher overlay when typing in Niri overview mode. Disable this if you prefer to not have the launcher when typing on Niri overview or want to use other launcher in the overview.": {
+    "When enabled, shows the launcher overlay when typing in Niri overview mode. Disable this if you prefer to not have the launcher when typing on Niri overview or want to use other launcher in the overview.": ""
+  },
   "Wi-Fi Password": {
     "Wi-Fi Password": ""
   },
@@ -2773,6 +2842,9 @@
   },
   "Wind": {
     "Wind": "Vento"
+  },
+  "Wind Speed": {
+    "Wind Speed": ""
   },
   "Workspace": {
     "Workspace": "Workspace"
