Update DMS versioning for Distro packages

--- a/distro/ubuntu/dms-git/debian/changelog
+++ b/distro/ubuntu/dms-git/debian/changelog
@@ -1,5 +1,8 @@
-dms-git (0.6.2+git2169.f7f1bbbdppa10) questing; urgency=medium
+dms-git (0.6.2+git2264.c5c5ce84) questing; urgency=medium
 
-  * Git snapshot (commit 2169: f7f1bbbd)
+  * Add VERSION file creation to all distro packages
+  * Fix Fedora COPR to pass VERSION/COMMIT to make dist
+  * Fix obs-upload.sh auto-increment to preserve git hash and add ppa suffix
+  * Git snapshot (commit 2264: c5c5ce84)
 
- -- Avenge Media <AvengeMedia.US@gmail.com>  Wed, 26 Nov 2025 21:43:12 -0500
+ -- Avenge Media <AvengeMedia.US@gmail.com>  Tue, 03 Dec 2025 01:50:00 +0000
